<resources>
    <string name="app_name">HTTP Phone Composer</string>
    <string name="notif_channel_call_name">Pending call</string>
    <string name="notif_channel_call_description">Call requested through the HTTP API</string>
    <string name="notif_channel_service_name">Running service</string>
    <string name="notif_service_running">The service is running.</string>
    <string name="desc_HttpServer">HTTP server initiating phone calls</string>
    <string name="title_activity_settings">Settings</string>
    <string name="svc_start">Start service</string>
    <string name="svc_stop">Stop service</string>
    <string name="info_status">Status</string>
    <string name="info_status_started">Running</string>
    <string name="info_status_stopped">Stopped</string>
    <string name="info_bound_addr">Local addresses</string>
    <string name="info_bound_port">Local port</string>
    <string name="info_ip_whitelist">IP whitelist</string>
    <string name="info_ip_blacklist">IP blacklist</string>
    <string name="btn_open_guide">Open guide (Web)</string>
    <string name="btn_open_guide_url">https://phonecomposerhttp.thouvest.ovh/?hl=en</string>
    <string name="btn_edit_config">Edit configuration</string>
    <string name="value_any">Any</string>
    <string name="value_empty">Empty</string>
    <string name="value_last_state">Last state</string>
    <string name="value_no">No</string>
    <string name="value_none">None</string>
    <string name="value_yes">Yes</string>
    <string name="cfg_autostart">Auto start</string>
    <string name="cfg_listen_port">Listen port</string>
    <string name="cfg_header_server">Header \"Server\"</string>
    <string name="cfg_header_powered_by">Header \"X-Powered-By\"</string>
    <string name="cfg_show_details_500">500 status: show details</string>
    <string name="cfg_request_workers_max">Max. request workers</string>
    <string name="cfg_request_expire">Request expire time</string>
    <string name="cfg_address_deny_reaction">IP filter reaction</string>
    <string name="cfg_address_whitelist">IP whitelist</string>
    <string name="cfg_address_blacklist">IP blacklist</string>
    <string name="cfg_password_use">Password use</string>
    <string name="cfg_password">Password</string>
    <string name="cfg_forbid_if_locked">Forbid if locked</string>
    <string name="cfg_allowed_during_call">Allowed during call</string>
    <string name="cfg_compo_notif">Show notification to compose</string>
    <string name="cfg_compose_vibrate">Vibrate on compose request</string>
    <string name="cfg_compose_mode">Compose mode</string>
    <string name="cfg_compose_speakerphone">Enable speakerphone</string>
    <string name="cfg_numbers_allowed">Allowed phone numbers (regex)</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_apply">Apply</string>
    <string name="msg_invalid_port">The port number must be in the range 1024-65535.</string>
    <string name="msg_invalid_expire">The expiration time must be greater than 0 ms.</string>
    <string name="msg_check_input">Please check input:</string>
    <string name="unit_ms">ms</string>
</resources>
